# chromium-binary-tiff-images

./: .gitmodules  CMakeLists.txt  index.html  readme.md  shell.nix
build-wasm/: group4-polyfill.js  group4-polyfill.wasm  tiff_wasm.js
doc/chat/: ChatGPT-TIFF-Support-in-Chromium.md
img/: test.group4.tiff  test.jpeg.tiff
include/ccitt_g4_tiff/: tiff.hpp
include/tiff_binary/: tiff.hpp
tools/: generate-test-images.sh  tiff_cli.cpp  tiff_to_bmp.cpp
